--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 (已存活3天)香港-3.78MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇨🇦 加拿大-1.01MB/s(Youtube:不良林), server: 134.195.196.128, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇳 中国-758.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-433.6KB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-811.6KB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
   - {name: 🇨🇦 加拿大-330.4KB/s(Youtube:不良林), server: 134.195.196.128, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇦 加拿大-805.7KB/s(Youtube:不良林), server: 134.195.196.128, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇦 加拿大-1.18MB/s(Youtube:不良林), server: 134.195.196.128, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇦 加拿大-961.3KB/s(Youtube:不良林), server: 134.195.196.128, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇦 加拿大-1.14MB/s(Youtube:不良林), server: 134.195.196.128, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-576.7KB/s(Youtube:不良林), server: 134.195.196.128, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇳 中国-3.13MB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8030, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇨🇦 加拿大-458.2KB/s(Youtube:不良林), server: 134.195.196.128, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇦 加拿大-1.48MB/s(Youtube:不良林), server: 134.195.196.128, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇳 中国-2.99MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-359.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-736.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-739.0KB/s(Youtube:不良林), server: 134.195.196.128, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-821.6KB/s(Youtube:不良林), server: 134.195.196.128, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活3天)香港-3.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-758.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-433.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-811.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-330.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-805.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-961.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-576.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-458.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-739.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-821.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 (已存活3天)香港-3.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-758.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-433.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-811.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-330.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-805.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-961.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-576.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-458.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-739.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-821.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活3天)香港-3.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-758.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-433.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-811.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-330.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-805.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-961.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-576.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-458.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-739.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-821.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活3天)香港-3.78MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 (已存活3天)香港-3.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-758.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-433.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-811.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-330.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-805.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-961.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-576.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-458.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-739.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-821.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活3天)香港-3.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-758.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-433.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-811.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-330.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-805.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-961.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-576.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-458.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-739.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-821.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活3天)香港-3.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-758.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-433.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-811.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-330.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-805.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-961.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-576.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-458.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-739.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-821.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活3天)香港-3.78MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-758.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-433.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-811.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-330.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-805.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-961.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-576.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-458.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-739.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-821.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
