--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-330.4KB/s(Youtube:不良林), server: 134.195.196.128, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-1.47MB/s(Youtube:不良林), server: 134.195.196.128, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-937.1KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇦 加拿大-576.7KB/s(Youtube:不良林), server: 134.195.196.128, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇳 中国-3.13MB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8030, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
-  - {name: 🇨🇦 加拿大-458.2KB/s(Youtube:不良林), server: 134.195.196.128, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇦 加拿大-1.48MB/s(Youtube:不良林), server: 134.195.196.128, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇦 加拿大-1.11MB/s(Youtube:不良林), server: 134.195.196.128, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇳 中国-706.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.99MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-359.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-736.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-330.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-937.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-576.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-458.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-706.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-330.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-937.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-576.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-458.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-706.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-330.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-937.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-576.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-458.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-706.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-330.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-937.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-576.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-458.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-706.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-330.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-937.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-576.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-458.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-706.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-330.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-937.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-576.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-458.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-706.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-330.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-937.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-576.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-458.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-706.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
