--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.47MB/s(Youtube:不良林), server: 134.195.196.128, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-937.1KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-576.7KB/s(Youtube:不良林), server: 134.195.196.128, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-1.11MB/s(Youtube:不良林), server: 134.195.196.128, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇳 中国-706.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.99MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-359.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-831.0KB/s(Youtube:不良林), server: 134.195.196.128, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇳 中国-986.7KB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8040, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇨🇳 中国-506.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-662.8KB/s(Youtube:不良林), server: 134.195.196.128, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇭🇰 (已存活3天)香港-3.96MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
   - {name: 🇨🇳 中国-736.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-739.0KB/s(Youtube:不良林), server: 134.195.196.128, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇨🇦 加拿大-821.6KB/s(Youtube:不良林), server: 134.195.196.128, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇦 加拿大-651.0KB/s(Youtube:不良林), server: 134.195.196.128, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-921.4KB/s(Youtube:不良林), server: 134.195.196.128, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-937.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-576.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-706.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-831.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-986.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-506.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-662.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.96MB/s(Youtube:不良林)
       - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-739.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-821.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-651.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-921.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-937.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-576.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-706.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-831.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-986.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-506.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-662.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.96MB/s(Youtube:不良林)
       - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-739.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-821.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-651.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-921.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-937.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-576.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-706.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-831.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-986.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-506.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-662.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.96MB/s(Youtube:不良林)
       - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-739.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-821.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-651.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-921.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活3天)香港-3.96MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-937.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-576.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-706.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-831.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-986.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-506.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-662.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.96MB/s(Youtube:不良林)
       - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-739.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-821.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-651.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-921.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-937.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-576.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-706.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-831.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-986.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-506.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-662.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.96MB/s(Youtube:不良林)
       - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-739.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-821.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-651.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-921.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-937.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-576.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-706.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-831.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-986.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-506.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-662.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.96MB/s(Youtube:不良林)
       - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-739.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-821.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-651.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-921.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-937.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-576.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-706.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-831.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-986.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-506.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-662.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.96MB/s(Youtube:不良林)
       - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-739.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-821.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-651.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-921.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
